# absurd-rust-sdk

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  ops  release-plz.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/parity/: absurd-sql-0.4.0-test-parity.md  absurd-sql-0.4.0.md
examples/: hello_world.rs  worker.rs
src/: client.rs  context.rs  error.rs  executor.rs  hooks.rs  lib.rs  task.rs  task_result.rs  types.rs  worker.rs
tests/: README.md  integration.rs
