[package]
name = "absurd-rust-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Manuel Schiller"]
description = "Community Rust SDK for Absurd, a Postgres-native durable workflow system"
license = "Apache-2.0"
repository = "https://github.com/manuschillerdev/absurd-rust-sdk"
readme = "README.md"
keywords = ["absurd", "postgres", "workflow", "durable", "queue"]
categories = ["asynchronous", "database"]
include = ["Cargo.toml", "LICENSE", "README.md", "docs/**", "examples/**", "src/**", "tests/**"]

[lib]
name = "absurd_rust_sdk"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
deadpool-postgres = { version = "0.14", default-features = false, features = ["rt_tokio_1"] }
hostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime", "with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tracing = "0.1"
uuid = { version = "1.0", default-features = false, features = ["serde", "std", "v4"] }

[dev-dependencies]
tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
multiple_crate_versions = "allow"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
